--- a/views/admin/Cargo.ejs
+++ b/views/admin/Cargo.ejs
@@ -62,7 +62,9 @@
     <div class="form-row">
         <div class="form-group">
             <label for="code_hs">Code HS</label>
-            <input type="text" id="code_hs" name="code_hs" >
+            <div id="code_hs_container">
+              
+            </div>
         </div>
         <div class="form-group">
             <label for="corridor">Corridor</label>
