--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -38,7 +38,7 @@
              
     
     <li >
-                    <a href="/administrateur" ><i class="fa fa-truck "></i>Tableau de bord <!--<span class="badge">Included</span>--></a>
+                    <a href="/administrateur" ><i class="fa fa-truck "></i>Cargo <!--<span class="badge">Included</span>--></a>
                 </li>
                
     
