--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -60,17 +60,36 @@
               </div>
             </div>
 
-            <div class="formbold-input-flex">
-                <div>
-                    <label for="firstname" class="formbold-form-label"> Code HS </label>
+            <div id="code-container">
+              <!-- Template for a single alarme -->
+              <div class="code-item">
+                <div class="formbold-input-flex">
+                  <div>
+                    <label for="code_hs" class="formbold-form-label">Code HS</label>
                     <input
-                    type="text"
-                    name="firstname"
-                    placeholder=""
-                    id="code_hs"
-                    class="formbold-form-input"
+                      
+                      name="code[code_hs]"
+                      placeholder=""
+                      class="formbold-form-input"
                     />
+                  </div>
+                  
                 </div>
+            
+               
+            
+                <button type="button" class="remove-code-btn styled-btn danger-btn">Enlever</button>
+              </div>
+            </div>
+            
+            <div>
+              <button type="button" id="add-code-btn" class="styled-btn primary-btn">Ajouter Code HS</button>
+            </div>
+
+            <div class="formbold-input-flex">
+
+              
+                
                 <div>
                     <label for="lastname" class="formbold-form-label"> Corridor </label>
                     <input
@@ -199,12 +218,18 @@
                   <div class="formbold-input-flex">
                     <div>
                       <label for="alarme_niveau" class="formbold-form-label">Niveau</label>
-                      <input
+                      <select class="formbold-form-input" name="alarme[niveau]">
+                          <option>Choisissez le niveau</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                      </select>
+                   <!--   <input
                         type="number"
                         name="alarme[niveau]"
                         placeholder=""
                         class="formbold-form-input"
-                      />
+                      /> -->
                     </div>
                     <div>
                       <label for="alarme_date" class="formbold-form-label">Date</label>
@@ -571,7 +596,19 @@
   margin-top: 20px;
 }
 
+#add-code-btn {
+  margin-top: 20px;
+}
+
 .alarme-item {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.code-item {
   margin-bottom: 20px;
   padding: 10px;
   border: 1px solid #ddd;
