working on date range

--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -219,7 +219,7 @@
                     <div>
                       <label for="alarme_niveau" class="formbold-form-label">Niveau</label>
                       <select class="formbold-form-input" name="alarme[niveau]">
-                          <option>Choisissez le niveau</option>
+                          <option value="">Choisissez le niveau</option>
                           <option value="1">1</option>
                           <option value="2">2</option>
                           <option value="3">3</option>
