--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -91,7 +91,7 @@
         <h4 class="title">Entrez dans votre compte</h4>
         <form id="loginForm">
           <div class="form-input">
-            <input type="text" id="email" placeholder="Email" name="email" required>
+            <input type="email" id="email" placeholder="Email" name="email" required>
           </div>
           <div class="form-input">
             <input type="password" id="password" placeholder="Mot de passe" name="password" required>
