--- a/views/admin/Cargo.ejs
+++ b/views/admin/Cargo.ejs
@@ -14,7 +14,8 @@
     <link href="/scripts/datatables.min.css" rel="stylesheet">
  
     <script src="/scripts/datatables.min.js"></script>
-
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/logo.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="../../assets/logo.png">
     
   
     <script src="../../assets/js/bootstrap.min.js"></script>
