--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -35,6 +35,10 @@
     <nav class="navbar-default navbar-side" role="navigation">
         <div class="sidebar-collapse">
             <ul class="nav" id="main-menu">
+
+                <li >
+                    <a href="/tableau-de-bord" ><i class="fa fa-tachometer "></i>Tableau de bord <!--<span class="badge">Included</span>--></a>
+                </li>
              
     
     <li >
