--- a/views/admin/Index.ejs
+++ b/views/admin/Index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
 
-    <title>Administrateur</title>
+    <title>Cargo</title>
 
     <script src="/scripts/admin_auth.js" defer></script>
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -17,7 +17,8 @@
     <link href="/scripts/datatables.min.css" rel="stylesheet">
  
     <script src="/scripts/datatables.min.js"></script>
-
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="../assets/logo.png">
     
   
     <script src="assets/js/bootstrap.min.js"></script>
@@ -44,7 +45,7 @@
             <div id="page-inner">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2>ADMINISTRATEUR</h2>
+                        <h2>CARGO</h2>
                     </div>
                 </div>
                 <hr />
