--- a/views/admin/ui.ejs
+++ b/views/admin/ui.ejs
@@ -13,6 +13,8 @@
     <link href="assets/css/custom.css" rel="stylesheet" />
     <!-- GOOGLE FONTS-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="../assets/logo.png">
 
     <script src="assets/js/jquery-1.10.2.js"></script> <!-- jQuery loaded here -->
 
