--- a/views/admin/user_data.ejs
+++ b/views/admin/user_data.ejs
@@ -15,7 +15,8 @@
  
     <script src="/scripts/datatables.min.js"></script>
 
-    
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/logo.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="../../assets/logo.png">
   
     <script src="../../assets/js/bootstrap.min.js"></script>
     <script src="/scripts/xslx.min.js"></script>
