working on popup

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -17,6 +17,8 @@
     <script type="text/javascript" src="assets/js/moment.min.js"></script>
     <script type="text/javascript" src="assets/js/daterangepicker.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/daterangepicker.css" />
+
+    <script type="text/javascript" src="assets/js/sweetalert2.min.js"></script>
    
     <link href="/scripts/datatables.min.css" rel="stylesheet">
  
