--- a/views/Data.ejs
+++ b/views/Data.ejs
@@ -188,7 +188,9 @@
             <input type="text" id="immatriculation" name="immatriculation" disabled>
     
             <label for="transitaire">Transitaire</label>
-            <input type="text" id="transitaire" name="transitaire" disabled>
+            <div id="transitaire_container">
+              
+            </div>
     
             <label for="chauffeur">Chauffeur</label>
             <input type="text" id="chauffeur" name="chauffeur" disabled>
