--- a/views/admin/Cargo.ejs
+++ b/views/admin/Cargo.ejs
@@ -85,7 +85,9 @@
     <div class="form-row">
         <div class="form-group">
             <label for="transitaire">Transitaire</label>
-            <input type="text" id="transitaire" name="transitaire" >
+            <div id="transitaire-container">
+              
+            </div>
         </div>
         <div class="form-group">
             <label for="chauffeur">Chauffeur</label>
