--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -86,7 +86,7 @@
               <button type="button" id="add-code-btn" class="styled-btn primary-btn">Ajouter Code HS</button>
             </div>
 
-            <div class="formbold-input-flex">
+            <div class="formbold-input-flex" style="margin-top: 16px;">
 
               
                 
@@ -128,8 +128,36 @@
 
               <h3 style="margin-bottom: 16px;">Personne de contact</h3>
 
-              <div class="formbold-input-flex">
+              <div>
+                <div id="transitaire-container">
+                  <!-- Template for a single alarme -->
+                  <div class="transitaire-item">
+                    <div class="formbold-input-flex">
+                      <div>
+                        <label for="code_hs" class="formbold-form-label">Transitaire</label>
+                        <input
+                          
+                          name="transitaire[transitaire]"
+                          placeholder=""
+                          class="formbold-form-input"
+                        />
+                      </div>
+                      
+                    </div>
+                
+                   
+                
+                    <button type="button" class="remove-transitaire-btn styled-btn danger-btn">Enlever</button>
+                  </div>
+                </div>
+                
                 <div>
+                  <button type="button" id="add-transitaire-btn" class="styled-btn primary-btn">Ajouter Transitaire</button>
+                </div>
+              </div>
+
+              <div class="formbold-input-flex" style="margin-top: 16px;">
+             <!--   <div>
                     <label for="firstname" class="formbold-form-label"> Transitaire </label>
                     <input
                     type="text"
@@ -138,7 +166,9 @@
                     id="transitaire"
                     class="formbold-form-input"
                     />
-                </div>
+                </div> -->
+
+               
                 <div>
                     <label for="lastname" class="formbold-form-label"> Chauffeur </label>
                     <input
@@ -149,19 +179,21 @@
                     class="formbold-form-input"
                     />
                 </div>
+
+                <div>
+                  <label for="firstname" class="formbold-form-label"> Telephone </label>
+                  <input
+                  type="tel"
+                  name="firstname"
+                  placeholder=""
+                  id="telephone"
+                  class="formbold-form-input"
+                  />
+              </div>
               </div>
 
               <div class="formbold-input-flex">
-                <div>
-                    <label for="firstname" class="formbold-form-label"> Telephone </label>
-                    <input
-                    type="tel"
-                    name="firstname"
-                    placeholder=""
-                    id="telephone"
-                    class="formbold-form-input"
-                    />
-                </div>
+                
                
               </div>
     
@@ -609,6 +641,14 @@
 }
 
 .code-item {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.transitaire-item {
   margin-bottom: 20px;
   padding: 10px;
   border: 1px solid #ddd;
