--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -27,10 +27,10 @@
                       Etape 2
                   </li>
         
-                <li class="formbold-step-menu3">
+                <!--<li class="formbold-step-menu3">
                     <span>3</span>
                     Etape 3
-                </li>
+                </li>-->
 
               </ul>
           </div>
@@ -247,9 +247,10 @@
                
               </div>
 
+              <!--
               <h3 style="margin-bottom: 16px">Alarmes</h3>
               <div id="alarme-container">
-                <!-- Template for a single alarme -->
+              
                 <div class="alarme-item">
                   <div class="formbold-input-flex">
                     <div>
@@ -260,12 +261,6 @@
                           <option value="2">2</option>
                           <option value="3">3</option>
                       </select>
-                   <!--   <input
-                        type="number"
-                        name="alarme[niveau]"
-                        placeholder=""
-                        class="formbold-form-input"
-                      /> -->
                     </div>
                     <div>
                       <label for="alarme_date" class="formbold-form-label">Date</label>
@@ -316,11 +311,12 @@
               <div>
                 <button type="button" id="add-alarme-btn" class="styled-btn primary-btn">Ajouter Alarme</button>
               </div>
+              -->
               
               
           </div>
   
-          <div class="formbold-form-step-3">
+        <!--  <div class="formbold-form-step-3">
 
             <h3 style="margin-bottom: 16px">Clotures</h3>
 
@@ -369,7 +365,13 @@
                 </div>
               </div>
 
-             <!--
+            
+
+
+            
+          </div> -->
+
+           <!--
               <h3 style="margin-bottom: 16px">Duree</h3>
 
               <div>
@@ -383,10 +385,6 @@
                 />
             </div> 
              -->
-
-
-            
-          </div>
   
           <div class="formbold-form-btn-wrapper">
             <button class="formbold-back-btn">
