--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/accueil">
                     <img src="assets/logo.png" style="height: 65px;"/>
                 </a>
             </div>
