making changes on creation

--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -194,7 +194,7 @@
                   id="telephone"
                   class="formbold-form-input"
                   />
-                  <span id="telephone-error" style="color: red; display: none;">Numero de telephone doit avoir 8 chiffres</span>
+                  <!--<span id="telephone-error" style="color: red; display: none;">Numero de telephone doit avoir 8 chiffres</span>-->
               </div>
               </div>
 
@@ -235,6 +235,16 @@
               </div>
 
               <div class="formbold-input-flex">
+                <div>
+                  <label for="firstname" class="formbold-form-label"> Date de la fin de creation </label>
+                  <input
+                  type="date"
+                  name="creation_date_fin"
+                  id="creation_date_fin"
+                  class="formbold-form-input"
+                />
+              </div>
+
                 <div>
                     <label for="firstname" class="formbold-form-label"> Heure fin </label>
                     <input
