working on the sheet of not clotured

--- a/views/Data.ejs
+++ b/views/Data.ejs
@@ -332,17 +332,17 @@
 
 
 
-          <div id="addClotureModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="addCableModalLabel" aria-hidden="true">
+          <div id="addCreationFin" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="addCableModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="addCableModalLabel">Ajouter cloture</h5>
+                  <h5 class="modal-title" id="addCableModalLabel">Ajouter date de fin de la creation</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
                 <div class="modal-body">
-                  <form id="addClotureForm">
+                  <form id="addCreationFinForm">
                     <div class="form-group">
                       <label for="firstname" class="formbold-form-label"> Date </label>
                     <input
@@ -359,23 +359,12 @@
                     type="time"
                     name="creationheurefin"
                     placeholder=""
-                    id="clotureheure"
+                    id="creationheurefin"
                     class="formbold-form-input"
                     />
                     </div>
-                    <div class="form-group">
-                      <label for="firstname" class="formbold-form-label"> Lieu </label>
-                    <input
-                    type="text"
-                    name="cloturelieu"
-                    placeholder=""
-                    id="cloturelieu"
-                    class="formbold-form-input"
-                    />
-                    </div>       
+                         
                     
-                    
-                   
                     
                     <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Enregistrer</button>
                   </form>
