added changes requested

--- a/views/Data.ejs
+++ b/views/Data.ejs
@@ -39,7 +39,7 @@
             <span>Retour en arriere</span>
         </a>
 
-        <div>
+        <div style="display: flex; align-items: center; justify-content: space-between;">
           <!--
           <button id="addUserButton" class="export"> <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
@@ -51,6 +51,11 @@
           <button id="addCommentButton" class="export"> <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path>
         </svg> Ajouter cas suspect</button>
+
+        <button style="display: flex; align-items: center; background-color: red;" id="deleteTransit" class="export"> <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3 6h18M8 6v12m4-12v12m4-12v12M5 6h14l-1 14H6L5 6zm3-3h8v3H8V3z"></path>
+      </svg>
+       Supprimer</button>
         </div>
 
         <div id="addUserModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="addUserModalLabel" aria-hidden="true">
@@ -461,7 +466,7 @@
                 <hr/>
 
 
-            <button id="addAlarmeButton" style="margin-bottom: 10px;" type="button" class="export">Ajouter alarme</button>
+            <button id="addAlarmeButton" style="margin-bottom: 10px; visibility: hidden;" type="button" class="export">Ajouter alarme</button>
            
             <div>
               
