--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -71,9 +71,7 @@
                 <hr />
                 <div class="row">
                     <div class="col-lg-12 ">
-                        <div class="alert alert-info">
-                            <strong>Welcome Jhon Doe !</strong> You Have No pending Task For Today.
-                        </div>
+                       
                     </div>
                 </div>
 
@@ -86,7 +84,7 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="addUserModalLabel">Enregistrer un utilisateur</h5>
+                          <h5 class="modal-title" id="addUserModalLabel">Selectionner une date</h5>
                           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                           </button>
